--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.WebDrive"
         tools:targetApi="31">
         <activity
+            android:name=".LessonsTraficSights"
+            android:exported="false" />
+        <activity
+            android:name=".LessonsActivity2"
+            android:exported="false" />
+        <activity
             android:name=".ExaminationActivity"
             android:exported="false" />
         <activity
