--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
         android:theme="@style/Theme.WebDrive"
         tools:targetApi="31">
         <activity
-            android:name=".LessonsTraficSights"
+            android:name=".next2trs"
             android:exported="false" />
         <activity
-            android:name=".LessonsActivity2"
+            android:name=".LessonsTraficSights"
             android:exported="false" />
         <activity
             android:name=".ExaminationActivity"
@@ -50,9 +50,7 @@
         <activity
             android:name=".EmailVerify"
             android:exported="false" />
-        <activity
-            android:name=".choose"
-            android:exported="false" />
+
         <activity
             android:name=".signIn"
             android:exported="false" />
