--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.WebDrive"
         tools:targetApi="31">
         <activity
+            android:name=".next4trs"
+            android:exported="false" />
+        <activity
+            android:name=".next3trs"
+            android:exported="false" />
+        <activity
             android:name=".next2trs"
             android:exported="false" />
         <activity
@@ -50,7 +56,6 @@
         <activity
             android:name=".EmailVerify"
             android:exported="false" />
-
         <activity
             android:name=".signIn"
             android:exported="false" />
